--- a/src/FXML/game.fxml
+++ b/src/FXML/game.fxml
@@ -9,7 +9,7 @@
 <?import javafx.scene.text.Font?>
 
 <AnchorPane prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/11.0.1"
-            xmlns:fx="http://javafx.com/fxml/1" fx:controller="controllers.GamePlayer1">
+            xmlns:fx="http://javafx.com/fxml/1" fx:controller="controllers.GamePage">
     <Pane fx:id="pane" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity"
           prefHeight="768.0" prefWidth="1024.0" style="-fx-background-color: #d0b8ac;"
           xmlns="http://javafx.com/javafx/11.0.1">
@@ -50,7 +50,7 @@
                 <Font name="Avenir Book" size="30.0" />
             </font>
             <stylesheets>
-                <URL value="@textArea.css" />
+                <URL value="@../CSS/textArea.css" />
             </stylesheets>
         </TextArea>
     </Pane>
