Complete ScoringPage, HistoryPage controllers. Little fixes in GamePage regarding logic

--- a/src/FXML/history.fxml
+++ b/src/FXML/history.fxml
@@ -10,7 +10,7 @@
 
 <AnchorPane prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/11.0.1"
             xmlns:fx="http://javafx.com/fxml/1" fx:controller="controllers.HistoryPage">
-    <Pane fx:id="pane" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity"
+    <Pane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity"
           prefHeight="768.0" prefWidth="1024.0" style="-fx-background-color: #d0b8ac;"
           xmlns="http://javafx.com/javafx/11.0.1">
         <Label layoutX="51.0" text="History of Matches">
@@ -31,7 +31,7 @@
             <Font name="Avenir Book" size="24.0" />
          </font>
          <stylesheets>
-            <URL value="@textArea.css" />
+            <URL value="@../CSS/textArea.css" />
          </stylesheets>
       </TextArea>
     </Pane>
