Added option to continue game. Small fixes across the code

--- a/src/FXML/begin.fxml
+++ b/src/FXML/begin.fxml
@@ -9,21 +9,21 @@
             xmlns:fx="http://javafx.com/fxml/1" fx:controller="controllers.BeginPage">
     <Pane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="768.0"
           prefWidth="1024.0" style="-fx-background-color: #d0b8ac;" xmlns="http://javafx.com/javafx/11.0.1">
-        <Button fx:id="begin" alignment="CENTER" layoutX="248.0" layoutY="297.0" mnemonicParsing="false"
-                onAction="#toSettings" prefHeight="174.0" prefWidth="528.0" style="-fx-background-color: null;"
+        <Button alignment="CENTER" layoutX="248.0" layoutY="297.0" mnemonicParsing="false" onAction="#toSettings"
+                prefHeight="174.0" prefWidth="528.0" style="-fx-background-color: null;"
                 text="New Game">
             <font>
               <Font name="Avenir Book" size="82.0" />
             </font>
         </Button>
-        <Button fx:id="history" alignment="CENTER" layoutX="574.0" layoutY="575.0" mnemonicParsing="false"
+        <Button alignment="CENTER" layoutX="574.0" layoutY="575.0" mnemonicParsing="false"
                 onAction="#toHistory" prefHeight="108.0" prefWidth="385.0" style="-fx-background-color: null;"
                 text="Match History">
             <font>
               <Font name="Avenir Book" size="50.0" />
             </font>
         </Button>
-      <Button fx:id="qa" alignment="CENTER" layoutX="66.0" layoutY="575.0" mnemonicParsing="false" onAction="#toQA"
+      <Button alignment="CENTER" layoutX="66.0" layoutY="575.0" mnemonicParsing="false" onAction="#toQA"
               prefHeight="108.0" prefWidth="365.0" style="-fx-background-color: null;" text="How to play?">
          <font>
             <Font name="Avenir Book" size="50.0" />
