--- a/src/FXML/score.fxml
+++ b/src/FXML/score.fxml
@@ -10,19 +10,25 @@
             xmlns:fx="http://javafx.com/fxml/1" fx:controller="controllers.ScorePage">
     <Pane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="768.0"
           prefWidth="1024.0" style="-fx-background-color: #d0b8ac;" xmlns="http://javafx.com/javafx/11.0.1">
-        <Button fx:id="exit" alignment="CENTER" layoutX="209.0" layoutY="553.0" mnemonicParsing="false" onAction="#exit"
+        <Button alignment="CENTER" layoutX="109.0" layoutY="553.0" mnemonicParsing="false" onAction="#exit"
                 prefHeight="108.0" prefWidth="607.0" style="-fx-background-color: null;" text="Exit game">
             <font>
                 <Font name="Avenir Book" size="50.0" />
             </font>
         </Button>
-      <Label fx:id="name" layoutX="234.0" layoutY="83.0" prefHeight="186.0" prefWidth="556.0" text=""
+        <Button alignment="CENTER" layoutX="309.0" layoutY="553.0" mnemonicParsing="false" onAction="#continueGame"
+                prefHeight="108.0" prefWidth="607.0" style="-fx-background-color: null;" text="Exit game">
+            <font>
+                <Font name="Avenir Book" size="50.0" />
+            </font>
+        </Button>
+      <Label fx:id="name" layoutX="234.0" layoutY="83.0" prefHeight="186.0" prefWidth="556.0"
              textAlignment="CENTER" textOverrun="WORD_ELLIPSIS" wrapText="true">
          <font>
             <Font size="75.0" />
          </font>
       </Label>
-      <Label fx:id="score" layoutX="131.0" layoutY="308.0" prefHeight="245.0" prefWidth="842.0" text=""
+      <Label fx:id="score" layoutX="131.0" layoutY="308.0" prefHeight="245.0" prefWidth="842.0"
              textAlignment="CENTER" textOverrun="WORD_ELLIPSIS" wrapText="true">
          <font>
             <Font size="50.0" />
